--- a/docs/pages/LeetCode/2024-03.md
+++ b/docs/pages/LeetCode/2024-03.md
@@ -1,102 +1,224 @@
-# 03  
+# 03
 
-## 03-20  
-1. **两数之和**  
->给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
->你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。
->你可以按任意顺序返回答案。
--  **例子**  
-输入：nums = [2,7,11,15], target = 9  
-输出：[0,1]  
-解释：因为 nums[0] + nums[1] == 9 ，返回 [0, 1] 。    
+## 03-20
 
--  **题解**  
+## 1. **两数之和**
+   > 给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target 的那 两个 整数，并返回它们的数组下标。
+   > 你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。
+   > 你可以按任意顺序返回答案。
 
-:::code-group 
+- **例子**  
+  输入：nums = [2,7,11,15], target = 9  
+  输出：[0,1]  
+  解释：因为 nums[0] + nums[1] == 9 ，返回 [0, 1] 。
+
+- **题解**
+
+:::code-group
+
 ```js [1.js]
-var twoSum = function(nums, target) {
-    let result =[]
-    for(let i=0;i<nums.length;i++){
-        for(let j=i+1;j<nums.length;j++){
-            let sum =nums[i]+nums[j]
-            if(sum===target){
-                result[0] =i;
-                result [1] =j;
-                return result
-            }
-        }
+var twoSum = function (nums, target) {
+  let result = [];
+  for (let i = 0; i < nums.length; i++) {
+    for (let j = i + 1; j < nums.length; j++) {
+      let sum = nums[i] + nums[j];
+      if (sum === target) {
+        result[0] = i;
+        result[1] = j;
+        return result;
+      }
     }
-    return result
-}
-
+  }
+  return result;
+};
 ```
 
 ```js [2.js]
-var twoSum = function(nums, target) {
-    let map =new Map();
-    for(let i=0;i<nums.length;i++){
-        let curNum =nums[i]
-         let targetNum =target-curNum
-        let targetIndex =map.get(targetNum);
-        if(targetIndex!=undefined){
-            return [ targetIndex,i]
-        }else{
-            map.set(curNum,i)
-        }
+var twoSum = function (nums, target) {
+  let map = new Map();
+  for (let i = 0; i < nums.length; i++) {
+    let curNum = nums[i];
+    let targetNum = target - curNum;
+    let targetIndex = map.get(targetNum);
+    if (targetIndex != undefined) {
+      return [targetIndex, i];
+    } else {
+      map.set(curNum, i);
     }
+  }
+};
+```
+
+:::
+
+## 2. **回文数**
+   > 给你一个整数 x ，如果 x 是一个回文整数，返回 true ；否则，返回 false 。  
+   > 回文数是指正序（从左向右）和倒序（从右向左）读都是一样的整数。
+
+- **例子**  
+  输入：x = 121  
+  输出：true
+
+- **题解**
+  > 负数不可能是回文数或(x!=0&&x%10==0)也不可能是回文数  
+  > 截取 y 为 x 的后一半对比 返回偶数 x ===y 返回奇数 x===Math.floor(y/10) 则是回文数 反之
+
+```js
+var isPalindrome = function (x) {
+  if (x < 0 || (x !== 0 && x % 10 === 0)) {
+    return false;
+  }
+  let y = 0;
+  while (x > y) {
+    y = y * 10 + (x % 10);
+    x = Math.floor(x / 10);
+  }
+
+  return x === y || x === Math.floor(y / 10);
+};
+```
+
+## 3. **罗马数字转整数**
+   > 罗马数字包含以下七种字符: I:1， V:5， X:10， L:50，C:100，D:500 和 M:1000。  
+   > 通常情况下，罗马数字中小的数字在大的数字的右边。但也存在特例，例如 4 不写做 IIII，而是 IV。数字 1 在数字 5 的左边，所表示的数等于大数 5 减小数 1 得到的数值 4 。同样地，数字 9 表示为 IX。这个特殊的规则只适用于以下六种情况  
+   > I 可以放在 V (5) 和 X (10) 的左边，来表示 4 和 9。  
+   > X 可以放在 L (50) 和 C (100) 的左边，来表示 40 和 90。  
+   > C 可以放在 D (500) 和 M (1000) 的左边，来表示 400 和 900。
+
+- **题解**
+  > 对比除了最后一个相邻字符 前面<后面则相减反之
+
+```js
+function romanToInt(s) {
+  let map = {
+    I: 1,
+    V: 5,
+    X: 10,
+    L: 50,
+    C: 100,
+    D: 500,
+    M: 1000,
+  };
+  let result = 0;
+  for (let i = 0; i < s.length; i++) {
+    if (i < s.length - 1 && map[s[i]] < map[s[i + 1]]) {
+      result -= map[s[i]];
+    } else {
+      result += map[s[i]];
+    }
+  }
+  return result;
 }
 ```
 
-:::  
+## 03-21
 
-2. **回文数**   
->给你一个整数 x ，如果 x 是一个回文整数，返回 true ；否则，返回 false 。  
->回文数是指正序（从左向右）和倒序（从右向左）读都是一样的整数。  
+## 1. **最长公有前缀**
+   > 编写一个函数来查找字符串数组中的最长公共前缀。  
+   > 如果不存在公共前缀，返回空字符串 ""。
+
 - **例子**  
-输入：x = 121  
-输出：true  
+  输入：strs = ["flower","flow","flight"]  
+  输出："fl"
 
-- **题解**  
-> 负数不可能是回文数或(x!=0&&x%10==0)也不可能是回文数   
->截取 y为x的后一半对比    返回偶数 x ===y 返回奇数 x===Math.floor(y/10) 则是回文数 反之
+- **题解**
+
 ```js
-var isPalindrome = function(x) {
-    if(x<0||(x!==0 && x%10===0)){
-        return false
+/**
+ * @description: 纵向对比 拿str第一个作为变量比较，循环找出公有前缀
+ * @param {*} strs
+ * @return {*}
+ */
+// a b c
+// a b c d
+// a b
+function longestCommonPrefix(str) {
+  if (str.length === 0) return "";
+  let prefix = str[0];
+  for (let i = 1; i < str.length; i++) {
+    while (str[i].indexOf(prefix) !== 0) {
+      prefix = prefix.substring(0, prefix.length - 1);
+      if (prefix === "") return "";
     }
-    let y =0;
-    while(x>y){
-        y= y * 10+ x % 10;
-        x=Math.floor(x/10);
-    }
-
-    return x===y || x===Math.floor(y/10)
+  }
+  return prefix;
 }
-```  
-3. **罗马数字转整数**  
->罗马数字包含以下七种字符: I:1， V:5， X:10， L:50，C:100，D:500 和 M:1000。  
->通常情况下，罗马数字中小的数字在大的数字的右边。但也存在特例，例如 4 不写做 IIII，而是 IV。数字 1 在数字 5 的左边，所表示的数等于大数 5 减小数 1 得到的数值 4 。同样地，数字 9 表示为 IX。这个特殊的规则只适用于以下六种情况    
->I 可以放在 V (5) 和 X (10) 的左边，来表示 4 和 9。  
->X 可以放在 L (50) 和 C (100) 的左边，来表示 40 和 90。   
->C 可以放在 D (500) 和 M (1000) 的左边，来表示 400 和 900。    
+
+/**
+ * @description: 纵向对比 拿str[0]首字母作为变量比较
+ * @param {*} strs
+ * @return {*}
+ */
+function longestCommonPrefix(strs) {
+  for (let i = 0; i < strs[0].length; i++) {
+    const c = strs[0][i];
+    for (let j = 1; j < strs.length; j++) {
+      if (i === strs[j].length || strs[j][i] != c) {
+        return strs[0].substrsing(0, i);
+      }
+    }
+  }
+  return strs[0];
+}
+```
+
+## 2. **有效的括号**
+   > 给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串 s ，判断字符串是否有效。  
+   > 有效字符串需满足：
+   >
+   > > 1. 左括号必须用相同类型的右括号闭合。
+   > > 2. 左括号必须以正确的顺序闭合。
+   > > 3. 每个右括号都有一个对应的相同类型的左括号。
+
+- **例子**  
+  输入：s = "()[]{}"  
+  输出：true
 
 - **题解**  
->对比除了最后一个相邻字符 后面>前面则相加反之
+  当 s 的长度为奇数时不匹配。  
+  记录每对括号相对应的右括号。  
+  循环遍历遇到左括号把左括号想对应的右括号存起来，  
+  遇到右括号则与存起来的最后一个匹配，匹配成功就将存起来的最后一个删除，失败就匹配失败 ！return false，  
+  循环结束：判断存起来的括号数组长度，有多余括号就匹配失败反之成功
+
 ```js
-function romanToInt(s){
-    let map ={
-        "I":1,'V':5,'X':10,'L':50,'C':100,'D':500,'M':1000
+function isValid(s) {
+  if (s.length % 2 === 1) return false;
+  const map = { "(": ")", "{": "}", "[": "]" };
+  const stack = [];
+  for (let i = 0; i < s.length; i++) {
+    const c = s[i];
+    if (map[c]) {
+      stack.push(map[c]);
+    } else {
+      if (stack.pop() !== c) {
+        return false;
+      }
     }
-    let result = 0;
-    for(let i=0;i<s.length;i++){
-        if(i<s.length-1 && map[s[i]]<map[s[i+1]] ){
-           result-=map[s[i]] 
-        }else{
-            result+=map[s[i]]
+  }
+  return stack.length === 0;
+}
+```
+## 3. 删除有序数组中的重复项  
+> 给你一个 非严格递增排列 的数组 nums ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。元素的 相对顺序 应该保持 一致 。然后返回 nums 中唯一元素的个数。  
+- **例子**  
+输入：nums = [0,0,1,1,1,2,2,3,3,4]  
+输出：5, nums = [0,1,2,3,4]  
+解释：函数应该返回新的长度 5 ， 并且原数组 nums 的前五个元素被修改为 0, 1, 2, 3, 4 。不需要考虑数组中超出新长度后面的元素。  
+
+- **题解**  
+nums的长度为0直接返回0。  
+let i =0 记录nums不重复个数，遍历nums从第二个开始对比当先项nums[j]!=nums[i],i+1,把nums[i]的换成nums[j],循环结束返回 i+1  
+```js
+ function removeDuplicates(nums){
+    if(nums.length===0) return 0  
+    let i =0;
+    for(let j= 1; j<nums.length;j++){
+        if(nums[j]!==nums[i]){
+            i++;
+            nums[i] =nums[j];
         }
-
     }
-    return result
-}
-
+    return i+1
+ }
 ```
